src/snapshots/afrotd__parser__tests__interpretation_9.3.3_7.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 3
index: 7
text: "A2 berührt mit seinen Händen den Rücken von B2, als sich dieser umdreht, um dem Block von A2 zu entgehen. Nachdem A2 mit seinen Händen den Kontakt zu B2 verloren hat, bewegt sich A2 vorwärts\nund drückt B2 in den Rücken."
ruling: "Illegaler Block in den Rücken.\nStrafe – 10 Meter. Die Strafe wird vom Previous Spot geahndet, wenn\nsich das Foul hinter der neutralen Zone ereignet (Regel 2.3.4). Safety,\nwenn sich das Foul hinter Team A’s Goalline ereignet."
