src/snapshots/afrotd__parser__tests__interpretation_9.3.3_8.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 3
index: 8
text: "A1, der sich in, jenseits oder hinter der neutralen Zone befindet, berührt einen Gegner mit den offenen Händen oder mit geschlossenen oder gewölbten Händen, wobei die Handflächen aber nicht zum\nGegner zeigen."
ruling: Legales Benutzen der Hände.
