src/snapshots/afrotd__parser__tests__interpretation_9.3.3_9.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 3
index: 9
text: "A12 nimmt den Snap an und geht zurück, um einen Pass zu\nwerfen. Defense End B95 gelangt an Tackle A75 vorbei und ist im Begriff A12, der sich immer noch in der Tackle Box befindet, zu tackeln.\nA75 drückt B95 in Höhe der Trikotnummer in den Rücken, um zu verhindern, dass dieser A12 tackelt. A12’s Pass wird zu einem Touchdown\nvervollständigt."
ruling: "Der Touchdown zählt, kein Foul von A75.\nDiese Aktionen, die sich auf den Schutz des Passers beziehen, während dieser sich innerhalb der Tackle Box befindet, liegen im Sinne der\nAusnahmen zu Regel 9.3.5 und sind daher legal. Wenn es sich bei dem\nBlock jedoch um eine separate Aktion und damit um einen neuen Block\naußerhalb der Blockzone handelt, ist das ein Foul für einen Block in den\nRücken."
