src/snapshots/afrotd__parser__tests__interpretation_9.3.4_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 4
index: 1
text: "Bevor ein legaler Vorwärtspass, der die neutrale Zone überquert,\ngeworfen wird, hält Team B den berechtigten A1 fest, der sich jenseits\nder neutralen Zone befindet."
ruling: "Team B-Foul, Halten. Strafe\n– 10 Meter und automatisch First Down. Previous Spot Strafdurchführung."
