src/snapshots/afrotd__parser__tests__interpretation_9.3.4_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 4
index: 2
text: "3. und 15 von der B-45. QB A12 geht zurück und schaut downfield nach A88, der als primäres Ziel anvisiert werden soll. B21 hält\nA88 an der B-35 fest. A12 wirft einen legalen Vorwärtspass auf seinen\nzweiten Receiver A44, aber der Pass fällt an der B-46 unvollständig zu\nBoden"
ruling: "A’s Ball, 1. und 10 von der B-35, Snap. Die Strafe\nfür das Halten durch B21 wird mit 10 Metern vom Previous Spot und\neinen automatischen First Down geahndet. Halten durch die Defense\nbeinhaltet einen automatischen First Down."
