src/snapshots/afrotd__parser__tests__interpretation_9.3.4_4.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 9
  - 3
  - 4
index: 4
text: "4. und 12 von der A-35. Team A stellt sich in einer Scrimmage Kick Formation auf, wobei sich A88 ganz außen, auf der rechten\nSeite der Formation aufgestellt hat. Mit dem Snap stößt B21 A88 zurück und hält ihn dann fest, als dieser versucht, während des Kicks an\nB21 vorbeizulaufen. Der Punt wird an der B-35 dead."
ruling: "Die\nStrafe für das Halten wird durch Post Scrimmage Kick Enforcement geregelt und der Post Scrimmage Kick Spot dient als Basic Spot für die\nStrafdurchführung. Die 10-Meterstrafe wird vom Ende des Kicks durchgeführt. Team B’s Ball, 1. und 10 von der B-25."
